--- a/website/documentation.html
+++ b/website/documentation.html
@@ -34,7 +34,7 @@
         <div class="dropdown-content-under">
             <a href="#Lexer:line3-20">Global definitions: Line 3-20</a>
             <a href="#Lexer:class_Token">Token class</a>
-            <a href="#Lexer:__init__">Lexer class __init__()</a>
+            <a href="#Lexer:__init__()">Lexer class __init__()</a>
             <a href="#Lexer:make_tokens()">Main method: make_tokens()</a>
             <a href="#Lexer:__advance()">__advance() method</a>
             <a href="#Lexer:__get_id()">__get_id() method</a>
