contact now working (just visually)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./website/style/style.css">
     <title>MIK - Home</title>
 </head>
@@ -12,18 +13,36 @@
             <ul>
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="./website/documentation.html">Documentation</a></li>
+                <li>
+                    <div class="dropdown">
+                        <button class="dropbtn">Contact</button>
+                        <div class="dropdown-content">
+                            <a href="#" target="_blank"><img src="./website/style/imgs/iconmonstr-github-3-240.png" width="20" height="20"> Github</a>
+                            <a href="#" target="_blank"><img src="./website/style/imgs/iconmonstr-youtube-8-240.png" width="20" height="20"> Youtube</a>
+                            <a href="#" target="_blank"><img src="./website/style/imgs/iconmonstr-discord-3-240.png" width="20" height="20"> Discord</a>
+                            <a href="#" target="_blank"><img src="./website/style/imgs/iconmonstr-twitter-3-240.png" width="20" height="20"> Twitter</a>
+                        </div>
+                      </div>
+                </li>
                 <li><a href="#">Download</a></li>
-                <li><a href="#">Contact</a></li>
             </ul>
         </div>
         <h2 class="home-btn"><a href="index.html">MIK</a></h2>
     </header>
     <div class="article">
-        <h1>Wohoo MIK!!!</h1>
-        <p> ipsum dolor sit, amet consectetur adipisicing elit. Repellendus voluptatum numquam sit aspernatur asperiores quisquam iusto suscipit. Suscipit, provident velit quae, error earum eveniet molestiae, quam quia voluptatem sunt est!<br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum suscipit cupiditate veniam quas iusto debitis totam libero repellendus! Atque nihil distinctio delectus veniam temporibus quod labore cum sunt voluptatem aperiam.<br>
-            dolor sit amet consectetur adipisicing elit. Impedit atque ea quo, consectetur culpa corporis repellat dolor nemo repellendus voluptatem, aliquid sint dicta. Dolorum similique deleniti necessitatibus voluptas illum minus.
-        </p>
-    </div>
+        <h1>The MIK programming language</h1>
+        <div class="article-doc">
+        <h2>History and Origin</h2>
+        <p>The MIK programming language was actually a meme that<br> has it's origin in a Powerpoint
+             presentation of my fellow<br> ComputerScience Teacher.<img src="./website/style/imgs/mik.png" style="float: left; padding: 5px;" width="200" height="200">
+              As the<br> meme gained some popularity<br> ideas of a operating system<br> sprung up. But a operating<br>
+               system alone wasn't going to be<br> good enough so an executive<br> decision was made:
+                <a href="https://mikos.gq" target="_blank">mikOS</a><br> should only be written in 
+                asm and<br> the MIK programming language!<br> So I emediatly started<br> development on this heavilly<br> optimised programming language<br> that will get a normal everyday use version some day!</p>
+        </div>
+
+        <div class="devlog">
+            <h1>Devlog</h1>
+        </div>
 </body>
 </html>
