--- a/website/documentation.html
+++ b/website/documentation.html
@@ -12,8 +12,18 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li class="active"><a href="#">Documentation</a></li>
+                <li>
+                    <div class="dropdown">
+                        <button class="dropbtn">Contact</button>
+                        <div class="dropdown-content">
+                            <a href="#" target="_blank"><img src="./style/imgs/iconmonstr-github-3-240.png" width="20" height="20"> Github</a>
+                            <a href="#" target="_blank"><img src="./style/imgs/iconmonstr-youtube-8-240.png" width="20" height="20"> Youtube</a>
+                            <a href="#" target="_blank"><img src="./style/imgs/iconmonstr-discord-3-240.png" width="20" height="20"> Discord</a>
+                            <a href="#" target="_blank"><img src="./style/imgs/iconmonstr-twitter-3-240.png" width="20" height="20"> Twitter</a>
+                        </div>
+                      </div>
+                </li>
                 <li><a href="#">Download</a></li>
-                <li><a href="#">Contact</a></li>
                 <li>
                     <div class="dropdown">
                     <button class="dropbtn">▶︎Sections◀︎</button>
@@ -81,7 +91,7 @@ class Token:
         </blockquote>
         <p>The class Token is a complex datatype. It gets initialized with a type and a value (types are the <a href="#Lexer:line3-20" target="_blank">🔗TT_... vars</a> shown above). It is used to tokenize every character. It also has a __repr__ method that prints the type:value if it's called via. print(token1).</p>
     </div>
-    <h2 id="Lexer:class_Lexer" style="padding-top: 2rem; padding-bottom: 0.5rem;">☞ Class Lexer</h2>
+    <h2 id="Lexer:class_Lexer" style="padding-top: 2rem; padding-bottom: 0.5rem; margin-left: 3rem;">☞ Class Lexer</h2>
     <div class="article-doc" id="Lexer:__init__()">
         <h2>__init__()</h2>
         <blockquote>
