--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
         <div class="devlog">
             <h1>Devlog</h1>
         </div>
+
+        <footer>
+            <p style="font-size: smaller;">©Moritz Schittenhekm</p>
+        </footer>
 </body>
 </html>
