--- a/website/documentation.html
+++ b/website/documentation.html
@@ -234,6 +234,7 @@ def __get_id(self):
     <footer>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <script src="./scripts/to_top.js"></script>
+        <p style="font-size: smaller;">©Moritz Schittenhekm</p>
     </footer>
 </body>
 </html>
