--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <footer>
-            <p style="font-size: smaller;">©Moritz Schittenhekm</p>
+            <p style="font-size: smaller;">©Moritz Schittenhelm</p>
         </footer>
 </body>
 </html>
