--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="article-doc">
         <h2>History and Origin</h2>
         <p>The MIK programming language was actually a meme that<br> has it's origin in a Powerpoint
-             presentation of my fellow<br> ComputerScience Teacher.<img src="./website/style/imgs/mik.png" style="float: left; padding: 5px;" width="200" height="200">
+             presentation of my fellow<br> ComputerScience Teacher.<img id="mik-img" src="./website/style/imgs/mik.png" style="float: left; padding: 5px;" width="200" height="200">
               As the<br> meme gained some popularity<br> ideas of a operating system<br> sprung up. But a operating<br>
                system alone wasn't going to be<br> good enough so an executive<br> decision was made:
                 <a href="https://mikos.gq" target="_blank">mikOS</a><br> should only be written in 
@@ -48,5 +48,6 @@
         <footer>
             <p style="font-size: smaller;">©Moritz Schittenhelm</p>
         </footer>
+        <script src="./website/scripts/mik-img-flip.js"></script>
 </body>
 </html>
