--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                             <a href="#" target="_blank"><img src="./website/style/imgs/iconmonstr-youtube-8-240.png" width="20" height="20"> Youtube</a>
                             <a href="#" target="_blank"><img src="./website/style/imgs/iconmonstr-discord-3-240.png" width="20" height="20"> Discord</a>
                             <a href="#" target="_blank"><img src="./website/style/imgs/iconmonstr-twitter-3-240.png" width="20" height="20"> Twitter</a>
+			    <a href="#" target="_blank">☞Portfolio</a>
                         </div>
                       </div>
                 </li>
