moved some stuf owo

--- a/website/documentation.html
+++ b/website/documentation.html
@@ -25,21 +25,26 @@
                       </div>
                 </li>
                 <li><a href="#">Download</a></li>
-                <li>
-                    <div class="dropdown">
-                    <button class="dropbtn">▶︎Sections◀︎</button>
-                    <div class="dropdown-content">
-                        <a href="#Lexer">Lexer</a>
-                        <a href="#Parser">Parser</a>
-                        <a href="#">Maker</a>
-                        <a href="#">Compiler</a>
-                    </div>
-                  </div>
-                </li>
             </ul>
         </div>
         <h2 class="home-btn"><a href="../index.html">MIK</a></h2>
     </header>
+    <div class="dropdown" style="display: block; padding-top: 1rem; background-color: #12232e;">
+        <button class="dropbtn" style="background-color: #12232e;">▶︎Sections◀︎</button>
+        <div class="dropdown-content">
+            <a href="#Lexer">compiler-util/Lexer</a>
+            <a href="#Parser">compiler-util/Parser</a>
+            <a href="#">compiler-util/Maker</a>
+            <a href="#">compiler-util/Preprocessor</a>
+            <a href="#">mip-src/</a>
+            <a href="#">Compiler</a>
+            <a href="#">mip</a>
+            <p><br><br>▶︎Packages◀︎</p>
+            <a href="#">mip - Package manager</a>
+            <a href="#">milk - A library format</a>
+            <a href="#">milk.pkg - Creating librarys</a>
+        </div>
+      </div>
     <div class="dropdown-under" id="Lexer">
         <button class="dropbtn-under"><h1>◉Lexer</h1></button>
         <div class="dropdown-content-under">
