actually working download

--- a/website/Download.html
+++ b/website/Download.html
@@ -24,23 +24,33 @@
               </div>
         </header>
         <div class="article-download">
-            <h2>Source code download</h2>
-            <a href="./downloads/src.zip" style="text-decoration: underline;" download="src.zip">⇢ src.zip ⇠</a>
+            <h2 class="function" style="padding: 20px;">Instruction markdown file</h2>
+            <a href="./downloads/INSTRUCTIONS.md" class="download_link"download="INSTRUCTIONS.md">INSTRUCTIONS.md</a>
         </div>
 
         <div class="article-download">
-            <h2>Mik compiler and mip package manager for Mac</h2>
-            <a href="./downloads/mac_mik.zip" style="text-decoration: underline;" download="mac-binary.zip">⇢ mic.zip ⇠</a>
+            <h2 class="function" style="padding: 20px;">Source code download (tar.gz)</h2>
+            <a href="./downloads/mic-0.0.2.tar.gz" class="download_link" download="src.tar.gz">src.tar.gz</a>
         </div>
 
         <div class="article-download">
-            <h2>Mik compiler and mip package manager for Windows</h2>
-            <a href="./downloads/win_mik.zip" style="text-decoration: underline;" download="win-binary.zip">⇢ mic.zip ⇠</a>
+            <h2 class="function" style="padding: 20px;">Source code download (zip)</h2>
+            <a href="./downloads/mic-0.0.2.zip" class="download_link" download="src.zip">src.zip</a>
         </div>
 
         <div class="article-download">
-            <h2>mik compiler and mip package manager for Linux</h2>
-            <a href="./downloads/linux_mik.zip" style="text-decoration: underline;" download="linux-binary.zip">⇢ mic.zip ⇠</a>
+            <h2 class="function" style="padding: 20px;">Mik compiler and mip package manager for Mac</h2>
+            <a href="./downloads/mac_mik.zip" class="download_link" download="mac-binary.zip">mic.zip</a>
+        </div>
+
+        <div class="article-download">
+            <h2 class="function" style="padding: 20px;">Mik compiler and mip package manager for Windows</h2>
+            <a href="./downloads/win_mik.zip" class="download_link" download="win-binary.zip">mic.zip</a>
+        </div>
+
+        <div class="article-download">
+            <h2 class="function" style="padding: 20px;">mik compiler and mip package manager for Linux</h2>
+            <a href="./downloads/linux_mik.zip" class="download_link" download="linux-binary.zip">mic.zip</a>
         </div>
 
         <footer>
