--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./website/style/style.css">
+    <link rel="stylesheet" href="website/style/style.css">
     <title>MIK - Home</title>
 </head>
 <body>
@@ -15,9 +15,9 @@
               <span></span>
               <div class="menu">
                 <li><a id="active" href="#">home</a></li>
-                <li><a href="./website/about.html">about</a></li>
-                <li><a href="./website/documentation.html">documentation</a></li>
-                <li><a href="./website/Download.html">download</a></li>
+                <li><a href="website/about.html">about</a></li>
+                <li><a href="website/documentation.html">documentation</a></li>
+                <li><a href="website/Download.html">download</a></li>
                 <li><a href="#">blog</a></li>
                 <li><a href="#">contact</a></li>
               </div>
@@ -42,6 +42,6 @@
         <footer>
             <p style="font-size: smaller;">©Moritz Schittenhelm</p>
         </footer>
-        <script src="./website/scripts/mik-img-flip.js"></script>
+        <script src="website/scripts/mik-img-flip.js"></script>
 </body>
 </html>
