--- a/website/Download.html
+++ b/website/Download.html
@@ -15,8 +15,8 @@
                   <span></span>
                   <div class="menu">
                     <li><a href="../index.html">home</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="./documentation.html">documentation</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="documentation.html">documentation</a></li>
                     <li><a id="active" href="#">download</a></li>
                     <li><a href="#">blog</a></li>
                     <li><a href="#">contact</a></li>
@@ -25,37 +25,37 @@
         </header>
         <div class="article-download">
             <h2 class="function" style="padding: 20px;">Instruction markdown file</h2>
-            <a href="./downloads/INSTRUCTIONS.md" class="download_link"download="INSTRUCTIONS.md">INSTRUCTIONS.md</a>
+            <a href="downloads/INSTRUCTIONS.md" class="download_link"download="INSTRUCTIONS.md">INSTRUCTIONS.md</a>
         </div>
 
         <div class="article-download">
             <h2 class="function" style="padding: 20px;">Source code download (tar.gz)</h2>
-            <a href="./downloads/mic-0.0.2.tar.gz" class="download_link" download="src.tar.gz">src.tar.gz</a>
+            <a href="downloads/mic-0.0.2.tar.gz" class="download_link" download="src.tar.gz">src.tar.gz</a>
         </div>
 
         <div class="article-download">
             <h2 class="function" style="padding: 20px;">Source code download (zip)</h2>
-            <a href="./downloads/mic-0.0.2.zip" class="download_link" download="src.zip">src.zip</a>
+            <a href="downloads/mic-0.0.2.zip" class="download_link" download="src.zip">src.zip</a>
         </div>
 
         <div class="article-download">
             <h2 class="function" style="padding: 20px;">Mik compiler and mip package manager for Mac</h2>
-            <a href="./downloads/mac_mik.zip" class="download_link" download="mac-binary.zip">mic.zip</a>
+            <a href="downloads/mac_mik.zip" class="download_link" download="mac-binary.zip">mic.zip</a>
         </div>
 
         <div class="article-download">
             <h2 class="function" style="padding: 20px;">Mik compiler and mip package manager for Windows</h2>
-            <a href="./downloads/win_mik.zip" class="download_link" download="win-binary.zip">mic.zip</a>
+            <a href="downloads/win_mik.zip" class="download_link" download="win-binary.zip">mic.zip</a>
         </div>
 
         <div class="article-download">
             <h2 class="function" style="padding: 20px;">mik compiler and mip package manager for Linux</h2>
-            <a href="./downloads/linux_mik.zip" class="download_link" download="linux-binary.zip">mic.zip</a>
+            <a href="downloads/linux_mik.zip" class="download_link" download="linux-binary.zip">mic.zip</a>
         </div>
 
         <footer>
             <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-            <script src="./scripts/to_top.js"></script>
+            <script src="scripts/to_top.js"></script>
             <p style="font-size: smaller;">©Moritz Schittenhelm</p>
         </footer>
     </body>
