--- a/website/about.html
+++ b/website/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>MIK - Home</title>
 </head>
     <body>
@@ -17,8 +17,8 @@
                 <div class="menu">
                     <li><a href="../index.html">home</a></li>
                     <li><a id="active" href="#">about</a></li>
-                    <li><a href="./documentation.html">documentation</a></li>
-                    <li><a href="./Download.html">download</a></li>
+                    <li><a href="documentation.html">documentation</a></li>
+                    <li><a href="Download.html">download</a></li>
                     <li><a href="#">blog</a></li>
                     <li><a href="#">contact</a></li>
                 </div>
