--- a/website/documentation.html
+++ b/website/documentation.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>MIK - Documentation</title>
 </head>
 <body class="layer1">
@@ -14,9 +14,9 @@
               <span></span>
               <div class="menu">
                 <li><a href="../index.html">home</a></li>
-                <li><a href="./about.html">about</a></li>
+                <li><a href="about.html">about</a></li>
                 <li><a id="active">documentation</a></li>
-                <li><a href="./Download.html">download</a></li>
+                <li><a href="Download.html">download</a></li>
                 <li><a href="#">blog</a></li>
                 <li><a href="#">contact</a></li>
               </div>
