--- a/website/about.html
+++ b/website/about.html
@@ -86,5 +86,11 @@ func add(int_type a, int_type b) -> int_type {
                 <p>Our goal is to have as many compiling targets for MIK as possible. As of now we only have c, but assembly as well as webassembly.</p>
             </div>
         </div>
+    
+     <footer>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+        <script src="scripts/to_top.js"></script>
+        <p style="font-size: smaller;">©Moritz Schittenhelm</p>
+    </footer>
     </body>
 </html>
