--- a/website/documentation.html
+++ b/website/documentation.html
@@ -62,7 +62,7 @@
 
     <footer>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-        <script src="./scripts/to_top.js"></script>
+        <script src="scripts/to_top.js"></script>
         <p style="font-size: smaller;">©Moritz Schittenhelm</p>
     </footer>
 </body>
