--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="./website/about.html">about</a></li>
                 <li><a href="./website/documentation.html">documentation</a></li>
                 <li><a href="./website/Download.html">download</a></li>
-                <li><a href="#">blog</a></li>
+                <li><a href="learn-html.html">learn</a></li>
                 <li><a href="#">contact</a></li>
               </div>
           </div>
