Added a learn mik sections

--- a/website/documentation.html
+++ b/website/documentation.html
@@ -39,7 +39,7 @@
             <a href="#">milk.pkg - Creating librarys</a>
         </div>
       </div>
-    <div class="dropdown-under" id="Lexer">
+    <div class="dropdown-under"style="text-align: center;">
         <button class="dropbtn-under"><h1>◉Lexer</h1></button>
         <div class="dropdown-content-under">
             <a href="#Lexer:line3-20">Global definitions: Line 3-20</a>
