--- a/website/Download.html
+++ b/website/Download.html
@@ -18,7 +18,7 @@
                     <li><a href="about.html">about</a></li>
                     <li><a href="documentation.html">documentation</a></li>
                     <li><a id="active" href="#">download</a></li>
-                    <li><a href="#">blog</a></li>
+                    <li><a href="learn_mik.html">learn</a></li>
                     <li><a href="#">contact</a></li>
                   </div>
               </div>
