--- a/website/about.html
+++ b/website/about.html
@@ -19,7 +19,7 @@
                     <li><a id="active" href="#">about</a></li>
                     <li><a href="documentation.html">documentation</a></li>
                     <li><a href="Download.html">download</a></li>
-                    <li><a href="#">blog</a></li>
+                    <li><a href="learn_mik.html">learn</a></li>
                     <li><a href="#">contact</a></li>
                 </div>
             </div>
